tempfile/auto_impl/tests/compile-fail/fn_associated_const.rs
use auto_impl::auto_impl;


#[auto_impl(Fn)]
trait Foo {
    const LEN: usize;

    fn a(&self);
}


fn main() {}
