tempfile/auto_impl/tests/compile-fail/fn_associated_const.stderr
error: this trait cannot be auto-implemented for Fn-traits (only traits with exactly one method and no other items are allowed)
 --> tests/compile-fail/fn_associated_const.rs:5:1
  |
5 | / trait Foo {
6 | |     const LEN: usize;
7 | |
8 | |     fn a(&self);
9 | | }
  | |_^
